...
    case hourly, daily, weekdays, weekly, monthly, interval, existing
    public var label: String {
      switch self {
      case .hourly: "Every hour"
      case .daily: "Every day"
      case .weekdays: "Weekdays"
      case .weekly: "Every week"
      case .monthly: "Every month"
      case .interval: "Interval"
      case .existing: "Existing schedule"
      }
    }
  }
...
